2018-09-24 Carlos Alberto Enciso
    * command_options.c: Add missing desriptions in the usage message for
      -q, -U, -x line5 and -x noprintsettinggroups.
2018-09-24 Carlos Alberto Enciso
    * command_options.c: Add missing desriptions in the usage message for
      -EI, -Em and -kw.
2018-09-20 Carlos Alberto Enciso
    * command_options.c: Move the code associated with each
      sub-option, to an individual function. Preliminary work for
      the implementation of long name options.
2018-09-19 Carlos Alberto Enciso
    * command_options.c: Move the code associated with each
      option, to an individual function. Preliminary work for
      the implementation of long name options.
    * glflags.h, glflags.c: New field to record the full program
      name. It is used by the '-V' option.
2018-09-12  David Anderson
    * esb.c: Corrected the use of HAVE_NONSTANDARD_PRINTF_64_FORMAT.
2018-09-11 David Anderson & Carlos Alberto Enciso
    * dwconf.c: Fixed typo in a comment.
    * dwarf_tsearchbal.c: int->size_t three places.
      A couple too-long lines indented. Matches
      tsearch directory version now.
    * esb.c: The test for _WIN32 in looking
      at printf formats  also allows
      config.h define HAVE_NONSTANDARD_PRINTF_64_FORMAT.
2018-09-11 David Anderson & Carlos Alberto Enciso
    * dwarfdump.c: Simplify the WIN32 code redirecting
      stderr to stdout as earlier workarounds no longer needed.
      Printing of parts of an Elf32 header had the wrong
      printf format-- fixed.
    * print_die.c: An implicit fallthrough to case DW_AT_LOCATION
      about line 2943 generates a warning with --enable-wall 
      so added a comment to make it clear to readers 
      this is intended.
2018-09-06  Carlos Alberto Enciso
     * dwarf_tsearchbal.c: Use the C99 PRIxPTR macro to print zero padded
       pointers, to remove warning C4477 on Windows platform.
2018-09-02 David Anderson
    * Makefile.am: Changed the way to build tag_tree and tag_attr